# Generated by Django 4.2.5 on 2023-10-06 11:23

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('seastar', '0002_camarote_ciudad_pais_puesto_tripulante_pasajero_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='CambioEstadoNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreEstadoNavio', models.CharField(max_length=255, verbose_name='Estado del Navio')),
                ('fechaCambioEstado', models.DateTimeField(verbose_name='Fecha del Cambio de Estado')),
            ],
        ),
        migrations.CreateModel(
            name='CategoriaItinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreCategoria', models.CharField(max_length=255, verbose_name='Nombre de la Categoría')),
                ('descripcionCategoria', models.TextField(verbose_name='Descripción de la Categoría')),
            ],
        ),
        migrations.CreateModel(
            name='CategoriaNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreCategoria', models.CharField(max_length=255, verbose_name='Nombre de la Categoría')),
                ('descripcionCategoria', models.TextField(verbose_name='Descripción de la Categoría')),
            ],
        ),
        migrations.CreateModel(
            name='EstadoNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreEstadoNavio', models.CharField(max_length=255, verbose_name='Estado del Navío')),
                ('descripcionEstadoNavio', models.TextField(verbose_name='Descripción del Estado del Navío')),
            ],
        ),
        migrations.CreateModel(
            name='Itinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreItinerario', models.CharField(max_length=255, verbose_name='Nombre del Itinerario')),
                ('descripcionItinerario', models.TextField(verbose_name='Descripción del Itinerario')),
                ('categoriaItinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.categoriaitinerario')),
            ],
        ),
        migrations.CreateModel(
            name='Puerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombrePuerto', models.CharField(max_length=255, verbose_name='Nombre del Puerto')),
                ('descripcionPuerto', models.TextField(verbose_name='Descripción del Puerto')),
            ],
        ),
        migrations.CreateModel(
            name='TipoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreTipoCamarote', models.CharField(max_length=255, verbose_name='Tipo de Camarote')),
                ('descripcionTipoCamarote', models.TextField(verbose_name='Descripción del Tipo de Camarote')),
            ],
        ),
        migrations.AlterField(
            model_name='camarote',
            name='numero_camarote',
            field=models.IntegerField(verbose_name='Número Camarote'),
        ),
        migrations.AlterField(
            model_name='camarote',
            name='ubicacion_camarote',
            field=models.IntegerField(verbose_name='Ubicación Camarote'),
        ),
        migrations.AlterField(
            model_name='ciudad',
            name='descripcion_ciudad',
            field=models.TextField(verbose_name='Descripción Ciudad'),
        ),
        migrations.AlterField(
            model_name='ciudad',
            name='nombre_ciudad',
            field=models.CharField(max_length=100, verbose_name='Nombre Ciudad'),
        ),
        migrations.AlterField(
            model_name='pais',
            name='descripcion_pais',
            field=models.TextField(verbose_name='Descripcion Pais'),
        ),
        migrations.AlterField(
            model_name='pais',
            name='idioma',
            field=models.CharField(max_length=50, verbose_name='Idioma'),
        ),
        migrations.AlterField(
            model_name='pais',
            name='moneda',
            field=models.CharField(max_length=50, verbose_name='Moneda'),
        ),
        migrations.AlterField(
            model_name='pais',
            name='nombre_pais',
            field=models.CharField(max_length=100, verbose_name='Nombre Pais'),
        ),
        migrations.AlterField(
            model_name='pasajero',
            name='nombre',
            field=models.CharField(max_length=100, verbose_name='Nombre'),
        ),
        migrations.AlterField(
            model_name='pasajero',
            name='numero_documento',
            field=models.IntegerField(verbose_name='Numero de Documento'),
        ),
        migrations.AlterField(
            model_name='pasajero',
            name='tipo_documento',
            field=models.CharField(max_length=100, verbose_name='Tipo de Documento'),
        ),
        migrations.AlterField(
            model_name='puesto',
            name='descripcion_puesto',
            field=models.TextField(verbose_name='Descripcion Puesto'),
        ),
        migrations.AlterField(
            model_name='puesto',
            name='nombre_puesto',
            field=models.CharField(max_length=100, verbose_name='Nombre Puesto'),
        ),
        migrations.AlterField(
            model_name='tripulante',
            name='legajo',
            field=models.CharField(max_length=10, verbose_name='Legajo'),
        ),
        migrations.AlterField(
            model_name='tripulante',
            name='nombre_jefe',
            field=models.CharField(max_length=100, verbose_name='Nombre Jefe'),
        ),
        migrations.AlterField(
            model_name='tripulante',
            name='nombre_tripulante',
            field=models.CharField(max_length=100, verbose_name='Nombre Tripulante'),
        ),
        migrations.CreateModel(
            name='SolicitudViaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('camaroteAsignado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.camarote')),
                ('pasajero', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.pasajero')),
            ],
        ),
        migrations.CreateModel(
            name='ReservaCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fechaReserva', models.DateTimeField(verbose_name='Fecha de la reserva')),
                ('listaCamarotes', models.ManyToManyField(to='seastar.camarote')),
            ],
        ),
        migrations.CreateModel(
            name='Recorrido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numeroEscala', models.IntegerField(verbose_name='Numero Escala')),
                ('fechaViaje', models.DateTimeField(verbose_name='Fecha de Inicio del viaje')),
                ('duracionViaje', models.FloatField(verbose_name='Duración aproximada del viaje')),
                ('itinerarioRealizado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.itinerario')),
                ('listaPasajeros', models.ManyToManyField(to='seastar.pasajero')),
                ('listaPuertos', models.ManyToManyField(to='seastar.puerto')),
                ('navioDelViaje', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.navio')),
            ],
        ),
        migrations.AddField(
            model_name='itinerario',
            name='listaPuertos',
            field=models.ManyToManyField(to='seastar.puerto'),
        ),
        migrations.CreateModel(
            name='HistorialTripulante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nuevoNombreJefe', models.CharField(max_length=255, verbose_name='Nuevo Jefe')),
                ('fechaCambio', models.DateTimeField(verbose_name='Fecha del cambio')),
                ('nuevoNavioAsignado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.navio')),
                ('nuevoPuestoTripulante', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.puesto')),
                ('tripulanteCambiado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.tripulante')),
            ],
        ),
        migrations.CreateModel(
            name='EstadoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ListaPasajerosOcupandoCamarote', models.ManyToManyField(to='seastar.pasajero')),
                ('camaroteOcupado', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='seastar.camarote')),
                ('tripulanteEncargado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.tripulante')),
            ],
        ),
        migrations.CreateModel(
            name='Cubierta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numeroCubierta', models.IntegerField(verbose_name='Numero Cubierta')),
                ('ubicacionCubierta', models.CharField(max_length=100, verbose_name='Ubicación Cubierta')),
                ('descripcionCubierta', models.CharField(max_length=200, verbose_name='Descripción Cubierta')),
                ('camarote', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.camarote')),
                ('encargado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.tripulante')),
            ],
        ),
        migrations.CreateModel(
            name='CambioPuerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fechaHoraLlegada', models.DateTimeField()),
                ('puertoActual', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='Puerto_Actual', to='seastar.puerto')),
                ('puertoAnterior', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='Puerto_Anterior', to='seastar.puerto')),
                ('puertoFuturo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='Puerto_Futuro', to='seastar.puerto')),
            ],
        ),
        migrations.AlterField(
            model_name='camarote',
            name='tipo_camarote',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='seastar.tipocamarote'),
        ),
    ]
