classDiagram
    class Navio {
        -int codigoNavio
        -String nombreNavio
        -float altura
        -float eslora
        -float manga
        -float desplazamiento
        -float autonomiaViaje
        -int cantidadCamarotes
        -int maxCantidadPasajeros
        -int cantidadMotores
        -int cantidadTripulantes
        -CategoriaNavio clasificacion
        -Tripulante listaTripulantes
        -Cubierta listaCubiertas

        +new()
        +conocerTripulantes()
        +conocerEstado()
        +conocerCategoria()
        +conocerCubierta()
        +conocerViaje()
    }

    class Cubierta {
        -int numeroCubierta
        -String ubicacionCubierta
        -Tripulante encargado
        -String descripcionCubierta
        -Camarote camarote
    
        +new()
        +conocerCamarote()
        +conocerUbicacion()
    }

    class Camarote {
        -TipoCamarote tipoCamarote
        -int ubicacionCamarote
        -int numeroCamarote
    
        +new()
        +conocerTipoCamarote()
        +conocerUbicacion()
    }

    class TipoCamarote {
        -String nombreTipoCamarote
        -String descripcionTipoCamarote
    
        +new()
    }

    class Tripulante {
        -String nombreTripulante
        -String legajo
        -Navio navioAsignado
        -Puesto puestoTripulante
        -String nombreJefe
    
        +new()
        +conocerPuesto()
    }

    class HistorialTripulante {
        -Tripulante tripulanteCambiado
        -Puesto nuevoPuestoTripulante
        -String nuevoNombreJefe
        -Navio nuevoNavioAsignado
        -datetime fechaCambio
    
        +new()
        +conocerPuesto()
    }

    class Puesto {
        -String nombrePuesto
        -String descripcionPuesto
    
        +new()
    }

    class Viaje {
        -Itinerario itinerarioRealizado
        -Navio navioDelViaje
        -datetime fechaViaje
        -float duracionViaje
        -Pasajero listaPasajerosReservados
        -Pasajero listaPasajerosPresentes
    
        +new()
    }

    class DetalleViaje {
        -Viaje viaje
        -Pasajero ListaPasajerosOcupandoCamarote
        -Camarote camaroteOcupado
        -Tripulante tripulanteEncargado
        -Puerto ultimoPuerto
        -Puerto proximoPuerto

        +new()
    }

    class Puerto {
        -String nombrePuerto
        -String descripcionPuerto
    
        +new()
    }

    class Pasajero {
        -String tipoDocumento
        -int numeroDocumento
        -String nombre
        -Pais paisOrigen
        -Ciudad ciudadOrigen
        -Viaje viajeRealizado
        -Camarote camaroteAlojado
    
        +new()Ubicacion
        +conocerPais()
        +conocerViaje()
        +isViajando()
    }

    class EstadoNavio {
        -String nobreEstadoNavio
        -String descripcionEstadoNavio
    
        +new()
    }

    class EstadoCamarote {
        -String nobreEstadoCamarote
        -String descripcionEstadoCamarote
    
        +new()
    }

    class CambioEstadoNavio {
        -String nobreEstadoNavio
        -datetime fechaCambioEstado

        +new()
    }

    class CategoriaNavio {
        -String nombreCategoria
        -String descripcionCategoria
    
        +new()
    }

    class CategoriaRecorrido {
        -String nombreCategoria
        -String descripcionCategoria
    
        +new()
    }

    class Pais {
        -String nombrePais
        -String descripcionPais
        -String moneda
        -String idioma

        +new()
        +conocerCiudad()

        +setNombrePais()
        +getNombrePais()
        +setDescripcionPais()
        +getDescripcionPais()
        +setMoneda()
        +getMoneda()
        +setIdioma()
        +getIdioma()
    }

    class Ciudad {
        -String nombreCiudad
        -String descripcionCiudad
        -Pais pais

        +new()
    }

    class Recorrido {
        -Puerto listaPuertos
        -int numeroEscala
        -CategoriaRecorrido categoriaRecorrido

        +new()
        +conocerNavio()
        +conocerPuerto()
        +conocerCategoria()
    }

    class CambioPuerto {
        -Puerto puertoSalida
        -Puerto puertoLlegada

        +new()
        +conocerPuerto()
    }

    class SolicitudViaje {
        -Pasajero pasajero
        -Camarote camaroteAsignado

        +new()
    }

    Navio --> "1..*" Viaje
    Tripulante --> "1..*" Viaje
    Recorrido --> "1..*" Viaje
    Pasajero --> "1..*" Viaje
    DetalleViaje --|> Viaje
    Camarote --> "1..*" DetalleViaje
    Recorrido --> "1" Navio
    Tripulante --|> Pasajero
    Puesto "1" <-- Tripulante 
    Camarote --> "1" TipoCamarote
    SolicitudViaje --> "1" EstadoCamarote
    Camarote --> "1" EstadoCamarote
    Navio --> "1..*" Cubierta
    Cubierta --> "1..*" Camarote
    Recorrido --> "1" CategoriaRecorrido
    Pasajero --> "1" Pais
    Pasajero --> "1" Ciudad
    Pasajero --> "1" SolicitudViaje
    SolicitudViaje --> "1" Camarote
    Pais --> "1..*" Ciudad
    Navio --> "1..*" CambioEstadoNavio
    CambioEstadoNavio --> "1" EstadoNavio
    Recorrido --> "1..*" CambioPuerto
    CambioPuerto --> "1..*" Puerto
    Navio --> "1" CategoriaNavio
    Tripulante --> "1..*" HistorialTripulante
    HistorialTripulante "1..*" --> Navio
